--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
 @charset 'utf-8';
 
+/* common css */
 *{
   margin: 0;
   padding: 0;
+}
+
+body{
+  max-width: 100%;
 }
 
 ul,li{
@@ -14,7 +19,41 @@ a{
   color: #333;
 }
 
+header, main{
+  width: 965px;
+  margin: 30px auto;
+}
 
-header img{
+section{
+  margin: 80px 0;
+}
+
+/* temporary */
+img{
   width: 30px;
+}
+
+/* service */
+#service .wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#service .content{
+  padding: 0 25px;
+}
+
+
+/* works */
+#works .grid ul{
+  display: grid;
+  grid-template-rows: 270px 270px 270px;
+  grid-template-columns: 270px 270px 270px;
+}
+#works .grid li{
+  width: 270px;
+  height: 270px;
+}
+#works .grid li img{
+  width: 100%;
 }
