--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,15 @@ img{
   width: 30px;
 }
 
+/* mainvisual */
+#mainvisual{
+  background-image: url(../img/サクラダリセット.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 750px;
+}
+
 /* service */
 #service .wrapper{
   display: flex;
