--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,55 @@
-@charset 'utf-8';
-
+@charset "UTF-8";
 /* common css */
-*{
+* {
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
-body{
-  max-width: 100%;
-}
+body {
+  max-width: 100%; }
 
-ul,li{
-  list-style: none;
-}
+ul, li {
+  list-style: none; }
 
-a{
+a {
   text-decoration: none;
-  color: #333;
-}
+  color: #333; }
 
-header, main{
+header, main {
   width: 965px;
-  margin: 30px auto;
-}
+  margin: 30px auto; }
 
-section{
-  margin: 80px 0;
-}
+section {
+  margin: 80px 0; }
 
 /* temporary */
-img{
-  width: 30px;
-}
+img {
+  width: 30px; }
 
 /* mainvisual */
-#mainvisual{
+#mainvisual {
   background-image: url(../img/サクラダリセット.png);
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  height: 750px;
-}
+  height: 750px; }
 
 /* service */
-#service .wrapper{
+#service .wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
-#service .content{
-  padding: 0 25px;
-}
-
+  align-items: center; }
+#service .content {
+  padding: 0 25px; }
 
 /* works */
-#works .grid ul{
+#works .grid ul {
   display: grid;
   grid-template-rows: 270px 270px 270px;
-  grid-template-columns: 270px 270px 270px;
-}
-#works .grid li{
-  width: 270px;
-  height: 270px;
-}
-#works .grid li img{
-  width: 100%;
-}
+  grid-template-columns: 270px 270px 270px; }
+  #works .grid ul li {
+    width: 270px;
+    height: 270px; }
+    #works .grid ul li img {
+      width: 100%; }
+
+/*# sourceMappingURL=style.css.map */
