--- a/css/style.scss
+++ b/css/style.scss
@@ -78,7 +78,7 @@ header{
 
 /* mainvisual */
 #mainvisual{
-  background-image: url(../img/サクラダリセット.png);
+  background-image: url('../img/1920x420.png');
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
