--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* common css */
 * {
   margin: 0;
@@ -49,7 +48,7 @@ header {
 
 /* mainvisual */
 #mainvisual {
-  background-image: url(../img/サクラダリセット.png);
+  background-image: url("../img/1920x420.png");
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
