--- a/css/style.scss
+++ b/css/style.scss
@@ -123,6 +123,7 @@ header{
   }
   .grid ul{
     display: grid;
+    justify-content: center;
     grid-template-rows: 270px 270px 270px;
     grid-template-columns: 270px 270px 270px;
     li{
